--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -8,3 +8,144 @@
 // @use 'vuetify/settings' with (
 //   $color-pack: false
 // );
+/* 把我们所有标签的内外边距清零 */
+// * {
+//   margin: 0;
+//   padding: 0;
+//   /* css3盒子模型 */
+//   box-sizing: border-box;
+// }
+
+/* 去除标题标签加粗效果 */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: onrmal;
+}
+
+/* em 和 i 斜体的文字不倾斜 */
+em,
+i {
+  font-style: normal
+}
+
+
+/* 去掉li 的小圆点 */
+li {
+  list-style: none
+}
+
+img {
+  /* border 0 照顾低版本浏览器 如果 图片外面包含了链接会有边框的问题 */
+  border: 0;
+  /* 取消图片底侧有空白缝隙的问题 */
+  vertical-align: middle
+}
+
+button {
+  /* 当我们鼠标经过button 按钮的时候，鼠标变成小手 */
+  cursor: pointer
+}
+
+a {
+  color: #666;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #c81623
+}
+
+button,
+input {
+  /* "\5B8B\4F53" 就是宋体的意思 这样浏览器兼容性比较好 */
+  font-family: Microsoft YaHei, Heiti SC, tahoma, arial, Hiragino Sans GB, "\5B8B\4F53", sans-serif;
+  /* 默认有灰色边框我们需要手动去掉 */
+  border: 0;
+  outline: none;
+}
+
+// body {
+//   /* CSS3 抗锯齿形 让文字显示的更加清晰 */
+//   -webkit-font-smoothing: antialiased;
+//   background-color: #fff;
+//   font: 12px/1.5 Microsoft YaHei, Heiti SC, tahoma, arial, Hiragino Sans GB, "\5B8B\4F53", sans-serif;
+//   color: #666
+// }
+
+// .hide,
+// .none {
+//   display: none
+// }
+
+/* 清除浮动 */
+.clearfix:after {
+  visibility: hidden;
+  clear: both;
+  display: block;
+  content: ".";
+  height: 0
+}
+
+// 默认样式分区
+
+* {
+  font-family: Source Han Sans CN;
+
+
+}
+
+// 版芯
+.w {
+  max-width: 1920px;
+  margin: 0 auto;
+  // background-color: #5f5f5f;
+}
+
+
+h3 {
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 30px;
+
+  .weight_4 {
+    font-weight: 400;
+  }
+}
+
+.text_center {
+  text-align: center;
+}
+
+.color_A0A1A3_4 {
+  color: #A0A1A3;
+  font-weight: 400;
+}
+
+.color_fff_4 {
+  color: #fff;
+  font-weight: 400;
+}
+
+.color_fff_5 {
+  color: #fff;
+  font-weight: 400;
+}
+
+.color_fff_bold {
+  color: #fff;
+  font-weight: bold;
+}
+
+.color_000_5 {
+  color: #000;
+  font-weight: 500;
+}
+
+.color_000_bold {
+  color: #000;
+  font-weight: bold;
+}
